<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/local_vs_visitante"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/resultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultLocal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/_0"
            android:gravity="center"
            android:textSize="125sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/separador"
            android:gravity="center"
            android:textSize="125sp"/>

        <TextView
            android:id="@+id/resultVisit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/_0"
            android:gravity="center"
            android:textSize="125sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/iterpretacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_below="@+id/resultados"
        android:text="@string/esperando_resultado"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>



</RelativeLayout>